# GD32F4xx_SPL

./: meson.build  meson_options.txt
CMSIS/: meson.build
CMSIS/GD/GD32F4xx/Source/: system_gd32f4xx.c
CMSIS/GD/GD32F4xx/Source/GCC/: startup_gd32f405_425.S  startup_gd32f407_427.S  startup_gd32f450_470.S
CMSIS/GD/GD32F4xx/Source/GCC/Ld/: gd32f405_407_xE_flash.ld  gd32f405_407_xG_flash.ld  gd32f405_407_xK_flash.ld  gd32f425_427_xE_flash.ld  gd32f425_427_xG_flash.ld  gd32f425_427_xK_flash.ld  gd32f450xE_flash.ld  gd32f450xG_flash.ld  gd32f450xI_flash.ld  gd32f450xK_flash.ld  gd32f470xE_flash.ld  gd32f470xG_flash.ld  gd32f470xI_flash.ld  gd32f470xK_flash.ld
CMSIS/GD/GD32F4xx/Source/GCC/newlib/: syscalls.c
GD32F4xx_standard_peripheral/: meson.build
GD32F4xx_standard_peripheral/Include/: gd32f4xx_libopt.h
GD32F4xx_standard_peripheral/Source/: gd32f4xx_enet.c
