option('chip',
    type: 'combo',
    choices: [
        '','GD32F405_xE', 'GD32F405_xG', 'GD32F405_xK',
        'GD32F407_xE', 'GD32F407_xG', 'GD32F407_xK',
        'GD32F425_xE', 'GD32F425_xG', 'GD32F425_xK',
        'GD32F427_xE', 'GD32F427_xG', 'GD32F427_xK',
        'GD32F450_xE', 'GD32F450_xG', 'GD32F450_xK', 'GD32F450_xI',
        'GD32F470_xE', 'GD32F470_xG', 'GD32F470_xK', 'GD32F470_xI',
    ],
    value: '',
    description: 'Select GD32F4xx chip model and flash size')

option('time',
    type: 'combo',
    choices: [
        'irc16m', 'hxtal',
        '120m_irc16m', '120m_8m_hxtal', '120m_25m_hxtal',
        '168m_irc16m', '168m_8m_hxtal', '168m_25m_hxtal',
        '200m_irc16m', '200m_8m_hxtal', '200m_25m_hxtal',
        '240m_irc16m', '240m_8m_hxtal', '240m_25m_hxtal'
    ],
    value: '168m_25m_hxtal',
    description: 'Select system clock source and frequency')